@@ -29,6 +29,7 @@ Version 1.7.2+svn:
    * it is now possible to specify a custom title= in [story] [part]s
    * [story] [part]s' text placement may be changed with text_layout=; it
      currently supports "top", "middle" and "bottom" (default)
+   * new tags [store_unit_type] and [store_unit_type_ids] were added
  * Miscellaneous and bugfixes:
    * 'Recruit' and 'recall' don't appear in context menus unless the
      leader is on a keep. (bug #13856 and #13855)
